[MLMP-30] added upload file component